// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`current offer parsing on the corpus 2026-02/aod-synthetic 1`] = `
[
  24.99,
  31.5,
  27,
  22.99,
  35,
]
`;

exports[`current offer parsing on the corpus 2026-02/offer-classic-synthetic 1`] = `
[
  22.5,
  28,
  19.99,
]
`;

exports[`current offer parsing on the corpus 2026-02/search-lastpage 1`] = `[]`;

exports[`current offer parsing on the corpus 2026-02/search-results 1`] = `[]`;

exports[`current offer parsing on the corpus 2026-09/aod-pinned-only 1`] = `[]`;

exports[`current offer parsing on the corpus 2026-09/captcha-synthetic 1`] = `[]`;

exports[`current offer parsing on the corpus 2026-09/interstitial-akamai 1`] = `[]`;

exports[`current offer parsing on the corpus 2026-09/product-dp 1`] = `[]`;

exports[`current offer parsing on the corpus 2026-09/search-no-pagination-synthetic 1`] = `[]`;

exports[`current offer parsing on the corpus 2026-09/search-title-recipe-synthetic 1`] = `[]`;

exports[`current offer parsing on the corpus 2026-09/search-yoga-mat 1`] = `[]`;

exports[`current offer parsing on the corpus urls 1`] = `
[
  "https://www.amazon.com/gp/aod/ajax?asin=B0TEST0001&condition=new&m=&qid=&smid=&sourcecustomerorglistid=&sourcecustomerorglistitemid=&sr=&pc=dp",
  "https://www.amazon.com/gp/offer-listing/B0TEST0001/ref=dp_olp_all_mbc?ie=UTF8&condition=new",
]
`;

exports[`current price, rating and review parsers price strings 1`] = `
[
  {
    "analyzer": 19.99,
    "cents": 1999,
    "input": "$19.99",
    "offer": 19.99,
  },
  {
    "analyzer": 1299,
    "cents": 129900,
    "input": "$1,299.00",
    "offer": 1299,
  },
  {
    "analyzer": 12.9924,
    "cents": 1299,
    "input": "$12.99 - $24.99",
    "offer": 12.9924,
  },
  {
    "analyzer": 19.99,
    "cents": 1999,
    "input": "$19.99 ($0.33/Ounce)",
    "offer": 19.99,
  },
  {
    "analyzer": 0,
    "cents": null,
    "input": "See price in cart",
    "offer": 0,
  },
  {
    "analyzer": 1999,
    "cents": 199900,
    "input": "€19,99",
    "offer": 1999,
  },
  {
    "analyzer": 24.99,
    "cents": 2499,
    "input": "CDN$ 24.99",
    "offer": 24.99,
  },
  {
    "analyzer": 0,
    "cents": 0,
    "input": "$0.00",
    "offer": 0,
  },
  {
    "analyzer": 0,
    "cents": null,
    "input": "FREE",
    "offer": 0,
  },
  {
    "analyzer": 24.995,
    "cents": 2500,
    "input": "$24.99 + $5.99 shipping",
    "offer": 24.995,
  },
  {
    "analyzer": 1.005,
    "cents": 100,
    "input": "$1.005",
    "offer": 1.005,
  },
  {
    "analyzer": 30.002,
    "cents": 3000,
    "input": "Was: $30.00 Now: $20.00",
    "offer": 30.002,
  },
  {
    "analyzer": 0,
    "cents": null,
    "input": "N/A",
    "offer": 0,
  },
  {
    "analyzer": 0,
    "cents": null,
    "input": "",
    "offer": 0,
  },
  {
    "analyzer": 0,
    "cents": null,
    "input": null,
    "offer": 0,
  },
  {
    "analyzer": 19.99,
    "cents": 1999,
    "input": 19.99,
    "offer": "throws TypeError",
  },
]
`;

exports[`current price, rating and review parsers rating and review strings 1`] = `
[
  {
    "analyzerRating": 4.5,
    "analyzerReviews": 455,
    "input": "4.5 out of 5 stars",
    "ratingText": 4.5,
    "reviewText": 5,
  },
  {
    "analyzerRating": 4.7,
    "analyzerReviews": 47,
    "input": "4.7",
    "ratingText": 4.7,
    "reviewText": 5,
  },
  {
    "analyzerRating": 0,
    "analyzerReviews": 0,
    "input": "",
    "ratingText": 0,
    "reviewText": 0,
  },
  {
    "analyzerRating": 0,
    "analyzerReviews": 0,
    "input": null,
    "ratingText": 0,
    "reviewText": 0,
  },
  {
    "analyzerRating": 0,
    "analyzerReviews": 1083,
    "input": "(108.3K)",
    "ratingText": 108.3,
    "reviewText": 108300,
  },
  {
    "analyzerRating": 0,
    "analyzerReviews": 12,
    "input": "(1.2M)",
    "ratingText": 1.2,
    "reviewText": 1200000,
  },
  {
    "analyzerRating": 0,
    "analyzerReviews": 64,
    "input": "(64)",
    "ratingText": 64,
    "reviewText": 64,
  },
  {
    "analyzerRating": 12,
    "analyzerReviews": 12847,
    "input": "12,847",
    "ratingText": 12,
    "reviewText": 12847,
  },
  {
    "analyzerRating": 0,
    "analyzerReviews": 0,
    "input": "N/A",
    "ratingText": 0,
    "reviewText": 0,
  },
  {
    "analyzerRating": 0,
    "analyzerReviews": 0,
    "input": "calificaciones",
    "ratingText": 0,
    "reviewText": 0,
  },
]
`;

exports[`current scraper behavior on the corpus 2026-02/aod-synthetic 1`] = `
{
  "currentItemCount": 0,
  "helpers": {
    "hasNext": true,
    "nextUrl": "https://www.amazon.com/gp/aod/ajax?asin=B0TEST001&page=2&ref=sr_pg_2",
    "total": 0,
  },
  "isScrapingActive": false,
  "nav": [],
  "results": [],
  "runPages": [],
  "sent": [
    "SCRAPING_COMPLETE",
  ],
}
`;

exports[`current scraper behavior on the corpus 2026-02/offer-classic-synthetic 1`] = `
{
  "currentItemCount": 0,
  "helpers": {
    "hasNext": true,
    "nextUrl": "https://www.amazon.com/gp/offer-listing/B0TEST001?page=2&ref=sr_pg_2",
    "total": 0,
  },
  "isScrapingActive": false,
  "nav": [],
  "results": [],
  "runPages": [],
  "sent": [
    "SCRAPING_COMPLETE",
  ],
}
`;

exports[`current scraper behavior on the corpus 2026-02/search-lastpage 1`] = `
{
  "currentItemCount": 1,
  "helpers": {
    "hasNext": false,
    "nextUrl": "https://www.amazon.com/s?k=test+widgets&page=6&ref=sr_pg_6",
    "total": 0,
  },
  "isScrapingActive": false,
  "nav": [],
  "results": [
    {
      "asin": "B0LAST001",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Last Page Product",
      "pageIndex": 1,
      "price": "$19.99",
      "priceCents": 1999,
      "rating": 4,
      "reviewCount": 500,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/dp/B0LAST001/ref=sr_1_1",
    },
  ],
  "runPages": [
    {
      "count": 1,
      "pageIndex": 1,
      "url": "https://www.amazon.com/s?k=test+widgets&page=5",
    },
  ],
  "sent": [
    "UPDATE_PROGRESS",
    "ENQUEUE_SYNC",
    "SCRAPING_COMPLETE",
  ],
}
`;

exports[`current scraper behavior on the corpus 2026-02/search-results 1`] = `
{
  "currentItemCount": 4,
  "helpers": {
    "hasNext": true,
    "nextUrl": "https://www.amazon.com/s?k=test+widgets&page=2&ref=sr_pg_2",
    "total": 523,
  },
  "isScrapingActive": true,
  "nav": [
    "[ProScan] Navigating to next page: https://www.amazon.com/s?k=test+widgets&page=2&ref=sr_pg_2",
  ],
  "results": [
    {
      "asin": "B0TEST001",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": true,
      "name": "Test Widget Pro 2000",
      "pageIndex": 1,
      "price": "$29.99",
      "priceCents": 2999,
      "rating": 4.5,
      "reviewCount": 12847,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/dp/B0TEST001/ref=sr_1_1",
    },
    {
      "asin": "B0TEST002",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Budget Gadget Basic",
      "pageIndex": 1,
      "price": "$9.99",
      "priceCents": 999,
      "rating": 3.8,
      "reviewCount": 247,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/dp/B0TEST002/ref=sr_1_2",
    },
    {
      "asin": "B0TEST003",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Mystery Item No Data",
      "pageIndex": 1,
      "price": "N/A",
      "priceCents": null,
      "rating": 0,
      "reviewCount": 0,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/dp/B0TEST003/ref=sr_1_3",
    },
    {
      "asin": "B0TEST004",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": true,
      "name": "Legacy Star Product",
      "pageIndex": 1,
      "price": "$49.99",
      "priceCents": 4999,
      "rating": 4.2,
      "reviewCount": 1500,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/dp/B0TEST004/ref=sr_1_4",
    },
  ],
  "runPages": [
    {
      "count": 4,
      "pageIndex": 1,
      "url": "https://www.amazon.com/s?k=test+widgets",
    },
  ],
  "sent": [
    "UPDATE_PROGRESS",
    "ENQUEUE_SYNC",
  ],
}
`;

exports[`current scraper behavior on the corpus 2026-09/aod-pinned-only 1`] = `
{
  "currentItemCount": 0,
  "helpers": {
    "hasNext": true,
    "nextUrl": "https://www.amazon.com/gp/product/ajax/aodAjaxMain/?asin=B09B8V1LZ3&page=2&ref=sr_pg_2",
    "total": 0,
  },
  "isScrapingActive": false,
  "nav": [],
  "results": [],
  "runPages": [],
  "sent": [
    "SCRAPING_COMPLETE",
  ],
}
`;

exports[`current scraper behavior on the corpus 2026-09/captcha-synthetic 1`] = `
{
  "currentItemCount": 0,
  "helpers": {
    "hasNext": true,
    "nextUrl": "https://www.amazon.com/s?k=yoga+mat&page=4&ref=sr_pg_4",
    "total": 0,
  },
  "isScrapingActive": false,
  "nav": [],
  "results": [],
  "runPages": [],
  "sent": [
    "SCRAPING_COMPLETE",
  ],
}
`;

exports[`current scraper behavior on the corpus 2026-09/interstitial-akamai 1`] = `
{
  "currentItemCount": 0,
  "helpers": {
    "hasNext": true,
    "nextUrl": "https://www.amazon.com/s?k=usb+c+cable&page=3&ref=sr_pg_3",
    "total": 0,
  },
  "isScrapingActive": false,
  "nav": [],
  "results": [],
  "runPages": [],
  "sent": [
    "SCRAPING_COMPLETE",
  ],
}
`;

exports[`current scraper behavior on the corpus 2026-09/product-dp 1`] = `
{
  "currentItemCount": 0,
  "helpers": {
    "hasNext": true,
    "nextUrl": "https://www.amazon.com/dp/B09B8V1LZ3?page=2&ref=sr_pg_2",
    "total": 0,
  },
  "isScrapingActive": false,
  "nav": [],
  "results": [],
  "runPages": [],
  "sent": [
    "SCRAPING_COMPLETE",
  ],
}
`;

exports[`current scraper behavior on the corpus 2026-09/search-no-pagination-synthetic 1`] = `
{
  "currentItemCount": 2,
  "helpers": {
    "hasNext": true,
    "nextUrl": "https://www.amazon.com/s?k=rare+widget&page=2&ref=sr_pg_2",
    "total": 0,
  },
  "isScrapingActive": true,
  "nav": [
    "[ProScan] Navigating to next page: https://www.amazon.com/s?k=rare+widget&page=2&ref=sr_pg_2",
  ],
  "results": [
    {
      "asin": "B0ONLYONE1",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Rare Widget, single result",
      "pageIndex": 1,
      "price": "$41.00",
      "priceCents": 4100,
      "rating": 0,
      "reviewCount": 0,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Rare-Widget/dp/B0ONLYONE1/ref=sr_1_1",
    },
    {
      "asin": "B0ONLYONE2",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Rare Widget, second result",
      "pageIndex": 1,
      "price": "$1,249.00",
      "priceCents": 124900,
      "rating": 0,
      "reviewCount": 0,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Rare-Widget-2/dp/B0ONLYONE2/ref=sr_1_2",
    },
  ],
  "runPages": [
    {
      "count": 2,
      "pageIndex": 1,
      "url": "https://www.amazon.com/s?k=rare+widget",
    },
  ],
  "sent": [
    "UPDATE_PROGRESS",
    "ENQUEUE_SYNC",
  ],
}
`;

exports[`current scraper behavior on the corpus 2026-09/search-title-recipe-synthetic 1`] = `
{
  "currentItemCount": 4,
  "helpers": {
    "hasNext": true,
    "nextUrl": "https://www.amazon.com/s?k=widget&page=2&ref=sr_pg_2",
    "total": 312,
  },
  "isScrapingActive": true,
  "nav": [
    "[ProScan] Navigating to next page: https://www.amazon.com/s?k=widget&page=2&ref=sr_pg_2",
  ],
  "results": [
    {
      "asin": "B0SPONS001",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Acme",
      "pageIndex": 1,
      "price": "$12.99",
      "priceCents": 1299,
      "rating": 4.4,
      "reviewCount": 2310,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/sspa/click?ie=UTF8&spc=x&url=%2FAcme-Widget%2Fdp%2FB0SPONS001%2Fref%3Dsr_1_1_sspa",
    },
    {
      "asin": "B0ORGANIC1",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Widget Basic, 3 ft",
      "pageIndex": 1,
      "price": "$7.49",
      "priceCents": 749,
      "rating": 4.1,
      "reviewCount": 512,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Widget-Basic/dp/B0ORGANIC1/ref=sr_1_2",
    },
    {
      "asin": "B0UNITONLY",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Bulk pack of widgets, 24 count",
      "pageIndex": 1,
      "price": "$0.35",
      "priceCents": 35,
      "rating": 0,
      "reviewCount": 0,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Bulk-Pack/dp/B0UNITONLY/ref=sr_1_3",
    },
    {
      "asin": "B0SPONS001",
      "delta": {
        "dPriceCents": 0,
        "dRating": 0,
        "dReviews": 0,
        "isNew": false,
      },
      "isPrime": false,
      "name": "Acme Widget Pro, 6 ft, Braided",
      "pageIndex": 1,
      "price": "$12.99",
      "priceCents": 1299,
      "rating": 4.4,
      "reviewCount": 2310,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Acme-Widget/dp/B0SPONS001/ref=sr_1_4",
    },
  ],
  "runPages": [
    {
      "count": 4,
      "pageIndex": 1,
      "url": "https://www.amazon.com/s?k=widget",
    },
  ],
  "sent": [
    "UPDATE_PROGRESS",
    "ENQUEUE_SYNC",
  ],
}
`;

exports[`current scraper behavior on the corpus 2026-09/search-yoga-mat 1`] = `
{
  "currentItemCount": 70,
  "helpers": {
    "hasNext": true,
    "nextUrl": "https://www.amazon.com/s?k=yoga+mat&page=2&ref=sr_pg_2",
    "total": 0,
  },
  "isScrapingActive": true,
  "nav": [
    "[ProScan] Navigating to next page: https://www.amazon.com/s?k=yoga+mat&page=2&ref=sr_pg_2",
  ],
  "results": [
    {
      "asin": "B07H9PZ6MH",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gaiam Thick Yoga Mat, Exercise & Fitness Mat with Easy-Cinch Carrying Strap",
      "pageIndex": 1,
      "price": "$21.23",
      "priceCents": 2123,
      "rating": 4.6,
      "reviewCount": 46641,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/sspa/click?ie=UTF8&spc=x&url=%2FGaiam-Essentials-Fitness-Exercise-Easy-Cinch%2Fdp%2FB07H9PZ6MH%2Fref%3Dsr_1_1_sspa%3Fdib%3DeyJ2IjoiMSJ9.McxGXA1uRR2X5VLLlTKa9FQsjFvdk3IZrCSKVG4gnGsqhtvlRyi1C6_kldSd63B_TFiqGQ_OWZjN3pEjhfMqb89jRixpMthJuFEMv-mmZEgJfpmqxAAmbcIxqe9Rks-W5iex1_ZX1yrdWGM8vbudNFr0rHfaeICEln6LGsZA5tnGVceP3omV3LRIWlzJAn7uiz1qArrcjQee6_KiP7rMefddx3-fWWMY1PkQbwvtTsQnWsAmqazPHedvvMK0n__FDfpLmtUeHpwG0CYYseh6I4Qv9br7na0VPh0XSKy-1hg.wUg0v-BAHC7fJYSVGHbYwCGPzj113BZi3GTmKTGN-_U%26dib_tag%3Dse%26keywords%3Dyoga%2Bmat%26qid%3D1790222636%26sr%3D8-1-spons%26sp_csd%3Dd2lkZ2V0TmFtZT1zcF9hdGY%26psc%3D1",
    },
    {
      "asin": "B091FX694F",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Retrospec Solana Yoga Mat Thick 1/2in Non-Slip Workout Mat with Nylon Strap - 72x24in Exercise Mat for Pilates, Stretching & Fitness - BPA Free, Easy Clean",
      "pageIndex": 1,
      "price": "$24.99",
      "priceCents": 2499,
      "rating": 4.4,
      "reviewCount": 9310,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/sspa/click?ie=UTF8&spc=x&url=%2FRetrospec-Solana-Thick-Nylon-Strap%2Fdp%2FB091FX694F%2Fref%3Dsr_1_2_sspa%3Fdib%3DeyJ2IjoiMSJ9.McxGXA1uRR2X5VLLlTKa9FQsjFvdk3IZrCSKVG4gnGsqhtvlRyi1C6_kldSd63B_TFiqGQ_OWZjN3pEjhfMqb89jRixpMthJuFEMv-mmZEgJfpmqxAAmbcIxqe9Rks-W5iex1_ZX1yrdWGM8vbudNFr0rHfaeICEln6LGsZA5tnGVceP3omV3LRIWlzJAn7uiz1qArrcjQee6_KiP7rMefddx3-fWWMY1PkQbwvtTsQnWsAmqazPHedvvMK0n__FDfpLmtUeHpwG0CYYseh6I4Qv9br7na0VPh0XSKy-1hg.wUg0v-BAHC7fJYSVGHbYwCGPzj113BZi3GTmKTGN-_U%26dib_tag%3Dse%26keywords%3Dyoga%2Bmat%26qid%3D1790222636%26sr%3D8-2-spons%26sp_csd%3Dd2lkZ2V0TmFtZT1zcF9hdGY%26psc%3D1",
    },
    {
      "asin": "B0H25VF5Y1",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Yoga Mat 72" x 24" x 6mm – Non Slip Exercise Mat",
      "pageIndex": 1,
      "price": "$29.99",
      "priceCents": 2999,
      "rating": 4.8,
      "reviewCount": 9,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/sspa/click?ie=UTF8&spc=x&url=%2FYoga-Mat-72-24-6mm%2Fdp%2FB0H25VF5Y1%2Fref%3Dsr_1_3_sspa%3Fdib%3DeyJ2IjoiMSJ9.McxGXA1uRR2X5VLLlTKa9FQsjFvdk3IZrCSKVG4gnGsqhtvlRyi1C6_kldSd63B_TFiqGQ_OWZjN3pEjhfMqb89jRixpMthJuFEMv-mmZEgJfpmqxAAmbcIxqe9Rks-W5iex1_ZX1yrdWGM8vbudNFr0rHfaeICEln6LGsZA5tnGVceP3omV3LRIWlzJAn7uiz1qArrcjQee6_KiP7rMefddx3-fWWMY1PkQbwvtTsQnWsAmqazPHedvvMK0n__FDfpLmtUeHpwG0CYYseh6I4Qv9br7na0VPh0XSKy-1hg.wUg0v-BAHC7fJYSVGHbYwCGPzj113BZi3GTmKTGN-_U%26dib_tag%3Dse%26keywords%3Dyoga%2Bmat%26qid%3D1790222636%26sr%3D8-3-spons%26sp_csd%3Dd2lkZ2V0TmFtZT1zcF9hdGY%26psc%3D1",
    },
    {
      "asin": "B092Y9XX85",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Retrospec Solana Yoga Mat 1" Thick w/Nylon Strap for Men & Women - Non Slip Exercise Mat for Home Yoga, Pilates, Stretching, Floor & Fitness Workouts",
      "pageIndex": 1,
      "price": "$39.99",
      "priceCents": 3999,
      "rating": 4.5,
      "reviewCount": 14999,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/sspa/click?ie=UTF8&spc=x&url=%2FRetrospec-Solana-Thick-Nylon-Strap%2Fdp%2FB092Y9XX85%2Fref%3Dsr_1_4_sspa%3Fdib%3DeyJ2IjoiMSJ9.McxGXA1uRR2X5VLLlTKa9FQsjFvdk3IZrCSKVG4gnGsqhtvlRyi1C6_kldSd63B_TFiqGQ_OWZjN3pEjhfMqb89jRixpMthJuFEMv-mmZEgJfpmqxAAmbcIxqe9Rks-W5iex1_ZX1yrdWGM8vbudNFr0rHfaeICEln6LGsZA5tnGVceP3omV3LRIWlzJAn7uiz1qArrcjQee6_KiP7rMefddx3-fWWMY1PkQbwvtTsQnWsAmqazPHedvvMK0n__FDfpLmtUeHpwG0CYYseh6I4Qv9br7na0VPh0XSKy-1hg.wUg0v-BAHC7fJYSVGHbYwCGPzj113BZi3GTmKTGN-_U%26dib_tag%3Dse%26keywords%3Dyoga%2Bmat%26qid%3D1790222636%26sr%3D8-4-spons%26sp_csd%3Dd2lkZ2V0TmFtZT1zcF9hdGY%26psc%3D1",
    },
    {
      "asin": "B07H4G664R",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gruper Yoga Mat Non Slip, Eco Friendly Exercise Mat with Carrying Strap",
      "pageIndex": 1,
      "price": "$25.19",
      "priceCents": 2519,
      "rating": 4.4,
      "reviewCount": 10640,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Gruper-Friendly-Exercise-Exercises-Thickness-6mm/dp/B07H4G664R/ref=sr_1_5?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-5",
    },
    {
      "asin": "B0FNX94PPX",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gaiam Thick Yoga Mat, Exercise & Fitness Mat with Easy-Cinch Carrying Strap",
      "pageIndex": 1,
      "price": "$24.98",
      "priceCents": 2498,
      "rating": 4.6,
      "reviewCount": 46641,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Gaiam-Essentials-Fitness-Exercise-Easy-Cinch/dp/B0FNX94PPX/ref=sr_1_6?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-6",
    },
    {
      "asin": "B0HC3HNW26",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Yoga Knee Pad Cushion, 0.6 Inch (15mm) Mini Yoga Mat for Home Workout",
      "pageIndex": 1,
      "price": "$8.99",
      "priceCents": 899,
      "rating": 4.5,
      "reviewCount": 2,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Yoga-Knee-Cushion-Inch-Workout/dp/B0HC3HNW26/ref=sr_1_7?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-7",
    },
    {
      "asin": "B091FX694F",
      "delta": {
        "dPriceCents": 0,
        "dRating": 0,
        "dReviews": 0,
        "isNew": false,
      },
      "isPrime": false,
      "name": "Retrospec Solana Yoga Mat Thick 1/2in Non-Slip Workout Mat with Nylon Strap - 72x24in Exercise Mat for Pilates, Stretching & Fitness - BPA Free, Easy Clean",
      "pageIndex": 1,
      "price": "$24.99",
      "priceCents": 2499,
      "rating": 4.4,
      "reviewCount": 9310,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/sspa/click?ie=UTF8&spc=x&url=%2FRetrospec-Solana-Thick-Nylon-Strap%2Fdp%2FB091FX694F%2Fref%3Dsxin_15_pa_sp_search_thematic_sspa%3Fcontent-id%3Damzn1.sym.f3ef5b6e-928d-46a7-b777-dc583fd8199d%253Aamzn1.sym.f3ef5b6e-928d-46a7-b777-dc583fd8199d%26cv_ct_cx%3Dyoga%2Bmat%26keywords%3Dyoga%2Bmat%26pd_rd_i%3DB091FX694F%26pd_rd_r%3D9218c877-048e-4da2-b898-b224c6d7ca99%26pd_rd_w%3DvRN8K%26pd_rd_wg%3DIXpD5%26pf_rd_p%3Df3ef5b6e-928d-46a7-b777-dc583fd8199d%26pf_rd_r%3DP96Q3KMBPB9SP02HFAJV%26qid%3D1790222636%26sbo%3DRZvfv%252F%252FHxDF%252BO5021pAnSA%253D%253D%26sr%3D1-1-6024b2a3-78e4-4fed-8fed-e1613be3bcce-spons%26aref%3DjEpz1k69cj%26sp_csd%3Dd2lkZ2V0TmFtZT1zcF9zZWFyY2hfdGhlbWF0aWM%26psc%3D1&aref=x",
    },
    {
      "asin": "B092XTMNCC",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Retrospec Solana Yoga Mat 1" Thick w/Nylon Strap for Men & Women - Non Slip Exercise Mat for Home Yoga, Pilates, Stretching, Floor & Fitness Workouts",
      "pageIndex": 1,
      "price": "$39.99",
      "priceCents": 3999,
      "rating": 4.5,
      "reviewCount": 14999,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/sspa/click?ie=UTF8&spc=x&url=%2FRetrospec-Solana-Thick-Nylon-Strap%2Fdp%2FB092XTMNCC%2Fref%3Dsxin_15_pa_sp_search_thematic_sspa%3Fcontent-id%3Damzn1.sym.f3ef5b6e-928d-46a7-b777-dc583fd8199d%253Aamzn1.sym.f3ef5b6e-928d-46a7-b777-dc583fd8199d%26cv_ct_cx%3Dyoga%2Bmat%26keywords%3Dyoga%2Bmat%26pd_rd_i%3DB092XTMNCC%26pd_rd_r%3D9218c877-048e-4da2-b898-b224c6d7ca99%26pd_rd_w%3DvRN8K%26pd_rd_wg%3DIXpD5%26pf_rd_p%3Df3ef5b6e-928d-46a7-b777-dc583fd8199d%26pf_rd_r%3DP96Q3KMBPB9SP02HFAJV%26qid%3D1790222636%26sbo%3DRZvfv%252F%252FHxDF%252BO5021pAnSA%253D%253D%26sr%3D1-2-6024b2a3-78e4-4fed-8fed-e1613be3bcce-spons%26aref%3DkhrKLD1Lha%26sp_csd%3Dd2lkZ2V0TmFtZT1zcF9zZWFyY2hfdGhlbWF0aWM%26psc%3D1&aref=x",
    },
    {
      "asin": "B09M8D4JMD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "COOLMOON Yoga Mat Non Slip, Anti-Tear 1/4 Thick TPE Yoga Mats for Women and Men, 72"x24" Exercise & Fitness Mat with Carrying Strap, Workout Mats for Yoga, Pilates and Floor Exercise",
      "pageIndex": 1,
      "price": "$36.99",
      "priceCents": 3699,
      "rating": 4.2,
      "reviewCount": 111,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/sspa/click?ie=UTF8&spc=x&url=%2FCOOLMOON-Double-Sided-Carrying-Friendly-Exercises%2Fdp%2FB09M8D4JMD%2Fref%3Dsxin_15_pa_sp_search_thematic_sspa%3Fcontent-id%3Damzn1.sym.f3ef5b6e-928d-46a7-b777-dc583fd8199d%253Aamzn1.sym.f3ef5b6e-928d-46a7-b777-dc583fd8199d%26cv_ct_cx%3Dyoga%2Bmat%26keywords%3Dyoga%2Bmat%26pd_rd_i%3DB09M8D4JMD%26pd_rd_r%3D9218c877-048e-4da2-b898-b224c6d7ca99%26pd_rd_w%3DvRN8K%26pd_rd_wg%3DIXpD5%26pf_rd_p%3Df3ef5b6e-928d-46a7-b777-dc583fd8199d%26pf_rd_r%3DP96Q3KMBPB9SP02HFAJV%26qid%3D1790222636%26sbo%3DRZvfv%252F%252FHxDF%252BO5021pAnSA%253D%253D%26sr%3D1-3-6024b2a3-78e4-4fed-8fed-e1613be3bcce-spons%26aref%3Dkv247ZQBuu%26sp_csd%3Dd2lkZ2V0TmFtZT1zcF9zZWFyY2hfdGhlbWF0aWM%26psc%3D1&aref=x",
    },
    {
      "asin": "B0GJSKH1GN",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "KEEP 72" x 24" Yoga Mat, 7mm Thick Non Slip TPE Mat",
      "pageIndex": 1,
      "price": "$24.99",
      "priceCents": 2499,
      "rating": 4.3,
      "reviewCount": 91,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/sspa/click?ie=UTF8&spc=x&url=%2FKEEP-Yoga-Thick-Slip-pink%2Fdp%2FB0GJSKH1GN%2Fref%3Dsxin_15_pa_sp_search_thematic_sspa%3Fcontent-id%3Damzn1.sym.f3ef5b6e-928d-46a7-b777-dc583fd8199d%253Aamzn1.sym.f3ef5b6e-928d-46a7-b777-dc583fd8199d%26cv_ct_cx%3Dyoga%2Bmat%26keywords%3Dyoga%2Bmat%26pd_rd_i%3DB0GJSKH1GN%26pd_rd_r%3D9218c877-048e-4da2-b898-b224c6d7ca99%26pd_rd_w%3DvRN8K%26pd_rd_wg%3DIXpD5%26pf_rd_p%3Df3ef5b6e-928d-46a7-b777-dc583fd8199d%26pf_rd_r%3DP96Q3KMBPB9SP02HFAJV%26qid%3D1790222636%26sbo%3DRZvfv%252F%252FHxDF%252BO5021pAnSA%253D%253D%26sr%3D1-4-6024b2a3-78e4-4fed-8fed-e1613be3bcce-spons%26aref%3DjWsZ8N7oas%26sp_csd%3Dd2lkZ2V0TmFtZT1zcF9zZWFyY2hfdGhlbWF0aWM%26psc%3D1&aref=x",
    },
    {
      "asin": "B0GNWFRM3X",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Stakt Foldable Yoga Mat Pro - Non Slip 2 in 1 Fitness Exercise Mat",
      "pageIndex": 1,
      "price": "$128.00",
      "priceCents": 12800,
      "rating": 4.2,
      "reviewCount": 57,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/sspa/click?ie=UTF8&spc=x&url=%2FStakt-Foldable-Yoga-Mat-Pro%2Fdp%2FB0GNWFRM3X%2Fref%3Dsxin_15_pa_sp_search_thematic_sspa%3Fcontent-id%3Damzn1.sym.f3ef5b6e-928d-46a7-b777-dc583fd8199d%253Aamzn1.sym.f3ef5b6e-928d-46a7-b777-dc583fd8199d%26cv_ct_cx%3Dyoga%2Bmat%26keywords%3Dyoga%2Bmat%26pd_rd_i%3DB0GNWFRM3X%26pd_rd_r%3D9218c877-048e-4da2-b898-b224c6d7ca99%26pd_rd_w%3DvRN8K%26pd_rd_wg%3DIXpD5%26pf_rd_p%3Df3ef5b6e-928d-46a7-b777-dc583fd8199d%26pf_rd_r%3DP96Q3KMBPB9SP02HFAJV%26qid%3D1790222636%26sbo%3DRZvfv%252F%252FHxDF%252BO5021pAnSA%253D%253D%26sr%3D1-5-6024b2a3-78e4-4fed-8fed-e1613be3bcce-spons%26aref%3DGbzcv5v6VI%26sp_csd%3Dd2lkZ2V0TmFtZT1zcF9zZWFyY2hfdGhlbWF0aWM%26psc%3D1&aref=x",
    },
    {
      "asin": "B01LP0UX9G",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Amazon Basics Extra Thick Exercise Yoga Mat with Carrying Strap",
      "pageIndex": 1,
      "price": "N/A",
      "priceCents": null,
      "rating": 4.6,
      "reviewCount": 70632,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/AmazonBasics-Extra-Thick-Exercise-Carrying/dp/B01LP0UX9G/ref=sr_1_8?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-8",
    },
    {
      "asin": "B07H9PZDQW",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gaiam Thick Yoga Mat, Exercise & Fitness Mat with Easy-Cinch Carrying Strap",
      "pageIndex": 1,
      "price": "$25.02",
      "priceCents": 2502,
      "rating": 4.6,
      "reviewCount": 46641,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Gaiam-Essentials-Fitness-Exercise-Easy-Cinch/dp/B07H9PZDQW/ref=sr_1_9?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-9",
    },
    {
      "asin": "B07H9KV2YN",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gaiam Thick Yoga Mat, Exercise & Fitness Mat with Easy-Cinch Carrying Strap",
      "pageIndex": 1,
      "price": "$21.11",
      "priceCents": 2111,
      "rating": 4.6,
      "reviewCount": 46641,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Gaiam-Essentials-Fitness-Exercise-Easy-Cinch/dp/B07H9KV2YN/ref=sr_1_10?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-10",
    },
    {
      "asin": "B0H28L9MPP",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "HAPBEAR Foldable Yoga Mat with Towel Set - 72"x24"x0.24" (6mm), Non-Slip TPE Exercise Mat with Absorbent Yoga Towel for Home Workout, Yoga, Pilates, Stretching & Travel, Durable & Eco-Friendly, Includes Carry Bag",
      "pageIndex": 1,
      "price": "$39.99",
      "priceCents": 3999,
      "rating": 4.7,
      "reviewCount": 26,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/sspa/click?ie=UTF8&spc=x&url=%2FHAPBEAR-Foldable-Yoga-Mat-Towel%2Fdp%2FB0H28L9MPP%2Fref%3Dsr_1_11_sspa%3Fdib%3DeyJ2IjoiMSJ9.McxGXA1uRR2X5VLLlTKa9FQsjFvdk3IZrCSKVG4gnGsqhtvlRyi1C6_kldSd63B_TFiqGQ_OWZjN3pEjhfMqb89jRixpMthJuFEMv-mmZEgJfpmqxAAmbcIxqe9Rks-W5iex1_ZX1yrdWGM8vbudNFr0rHfaeICEln6LGsZA5tnGVceP3omV3LRIWlzJAn7uiz1qArrcjQee6_KiP7rMefddx3-fWWMY1PkQbwvtTsQnWsAmqazPHedvvMK0n__FDfpLmtUeHpwG0CYYseh6I4Qv9br7na0VPh0XSKy-1hg.wUg0v-BAHC7fJYSVGHbYwCGPzj113BZi3GTmKTGN-_U%26dib_tag%3Dse%26keywords%3Dyoga%2Bmat%26qid%3D1790222636%26sr%3D8-11-spons%26sp_csd%3Dd2lkZ2V0TmFtZT1zcF9tdGY%26psc%3D1",
    },
    {
      "asin": "B09M8D4JMD",
      "delta": {
        "dPriceCents": 0,
        "dRating": 0,
        "dReviews": 0,
        "isNew": false,
      },
      "isPrime": false,
      "name": "COOLMOON Yoga Mat Non Slip, Anti-Tear 1/4 Thick TPE Yoga Mats for Women and Men, 72"x24" Exercise & Fitness Mat with Carrying Strap, Workout Mats for Yoga, Pilates and Floor Exercise",
      "pageIndex": 1,
      "price": "$36.99",
      "priceCents": 3699,
      "rating": 4.2,
      "reviewCount": 111,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/sspa/click?ie=UTF8&spc=x&url=%2FCOOLMOON-Double-Sided-Carrying-Friendly-Exercises%2Fdp%2FB09M8D4JMD%2Fref%3Dsr_1_12_sspa%3Fdib%3DeyJ2IjoiMSJ9.McxGXA1uRR2X5VLLlTKa9FQsjFvdk3IZrCSKVG4gnGsqhtvlRyi1C6_kldSd63B_TFiqGQ_OWZjN3pEjhfMqb89jRixpMthJuFEMv-mmZEgJfpmqxAAmbcIxqe9Rks-W5iex1_ZX1yrdWGM8vbudNFr0rHfaeICEln6LGsZA5tnGVceP3omV3LRIWlzJAn7uiz1qArrcjQee6_KiP7rMefddx3-fWWMY1PkQbwvtTsQnWsAmqazPHedvvMK0n__FDfpLmtUeHpwG0CYYseh6I4Qv9br7na0VPh0XSKy-1hg.wUg0v-BAHC7fJYSVGHbYwCGPzj113BZi3GTmKTGN-_U%26dib_tag%3Dse%26keywords%3Dyoga%2Bmat%26qid%3D1790222636%26sr%3D8-12-spons%26sp_csd%3Dd2lkZ2V0TmFtZT1zcF9tdGY%26psc%3D1",
    },
    {
      "asin": "B0GG8RY26S",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "PAIDU Foldable Yoga Mat, 70"x24"x0.31" TPE Non-Slip Mat with Bag",
      "pageIndex": 1,
      "price": "$42.65",
      "priceCents": 4265,
      "rating": 4.4,
      "reviewCount": 31,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/sspa/click?ie=UTF8&spc=x&url=%2FPAIDU-Foldable-Double-Sided-Non-Slip-Carrying%2Fdp%2FB0GG8RY26S%2Fref%3Dsr_1_13_sspa%3Fdib%3DeyJ2IjoiMSJ9.McxGXA1uRR2X5VLLlTKa9FQsjFvdk3IZrCSKVG4gnGsqhtvlRyi1C6_kldSd63B_TFiqGQ_OWZjN3pEjhfMqb89jRixpMthJuFEMv-mmZEgJfpmqxAAmbcIxqe9Rks-W5iex1_ZX1yrdWGM8vbudNFr0rHfaeICEln6LGsZA5tnGVceP3omV3LRIWlzJAn7uiz1qArrcjQee6_KiP7rMefddx3-fWWMY1PkQbwvtTsQnWsAmqazPHedvvMK0n__FDfpLmtUeHpwG0CYYseh6I4Qv9br7na0VPh0XSKy-1hg.wUg0v-BAHC7fJYSVGHbYwCGPzj113BZi3GTmKTGN-_U%26dib_tag%3Dse%26keywords%3Dyoga%2Bmat%26qid%3D1790222636%26sr%3D8-13-spons%26sp_csd%3Dd2lkZ2V0TmFtZT1zcF9tdGY%26psc%3D1",
    },
    {
      "asin": "B0DFBSMMZS",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "PAIDU Foldable Yoga Mat 10mm Thick, 75"x26" Non-Slip Fitness Exercise Mat",
      "pageIndex": 1,
      "price": "$51.49",
      "priceCents": 5149,
      "rating": 4.3,
      "reviewCount": 100,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/sspa/click?ie=UTF8&spc=x&url=%2FPAIDU-Foldable-material-portable-multi-functional%2Fdp%2FB0DFBSMMZS%2Fref%3Dsr_1_14_sspa%3Fdib%3DeyJ2IjoiMSJ9.McxGXA1uRR2X5VLLlTKa9FQsjFvdk3IZrCSKVG4gnGsqhtvlRyi1C6_kldSd63B_TFiqGQ_OWZjN3pEjhfMqb89jRixpMthJuFEMv-mmZEgJfpmqxAAmbcIxqe9Rks-W5iex1_ZX1yrdWGM8vbudNFr0rHfaeICEln6LGsZA5tnGVceP3omV3LRIWlzJAn7uiz1qArrcjQee6_KiP7rMefddx3-fWWMY1PkQbwvtTsQnWsAmqazPHedvvMK0n__FDfpLmtUeHpwG0CYYseh6I4Qv9br7na0VPh0XSKy-1hg.wUg0v-BAHC7fJYSVGHbYwCGPzj113BZi3GTmKTGN-_U%26dib_tag%3Dse%26keywords%3Dyoga%2Bmat%26qid%3D1790222636%26sr%3D8-14-spons%26sp_csd%3Dd2lkZ2V0TmFtZT1zcF9tdGY%26psc%3D1",
    },
    {
      "asin": "B0HGFH7QVH",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "6.2x3ft Folding Gym Mat, 3" Thick",
      "pageIndex": 1,
      "price": "$59.99",
      "priceCents": 5999,
      "rating": 5,
      "reviewCount": 4,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/STMHOM-6-2x3ft-Folding-Gym-Thick/dp/B0HGFH7QVH/ref=sr_1_15?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-15",
    },
    {
      "asin": "B07JQCVBBZ",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gruper Yoga Mat Non Slip, Eco Friendly Exercise Mat with Carrying Strap",
      "pageIndex": 1,
      "price": "$28.16",
      "priceCents": 2816,
      "rating": 4.4,
      "reviewCount": 10640,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Gruper-Friendly-Exercise-Exercises-Thickness-6mm/dp/B07JQCVBBZ/ref=sr_1_16?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-16",
    },
    {
      "asin": "B09WF85T8M",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gaiam Yoga Mat - Premium 6mm Print Reversible Extra Thick Non Slip Exercise & Fitness Mat for All Types of Yoga, Pilates & Floor Workouts (68" x 24" x 6mm Thick)",
      "pageIndex": 1,
      "price": "$22.75",
      "priceCents": 2275,
      "rating": 4.6,
      "reviewCount": 15587,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Gaiam-Premium-Reversible-Exercise-Workouts/dp/B09WF85T8M/ref=sr_1_17?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-17",
    },
    {
      "asin": "B091FX694F",
      "delta": {
        "dPriceCents": 0,
        "dRating": 0,
        "dReviews": 0,
        "isNew": false,
      },
      "isPrime": false,
      "name": "Retrospec Solana Yoga Mat Thick 1/2in Non-Slip Workout Mat with Nylon Strap - 72x24in Exercise Mat for Pilates, Stretching & Fitness - BPA Free, Easy Clean",
      "pageIndex": 1,
      "price": "$24.99",
      "priceCents": 2499,
      "rating": 4.4,
      "reviewCount": 9310,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Retrospec-Solana-Thick-Nylon-Strap/dp/B091FX694F/ref=sr_1_18?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-18",
    },
    {
      "asin": "B0GNWFRM3X",
      "delta": {
        "dPriceCents": 0,
        "dRating": 0,
        "dReviews": 0,
        "isNew": false,
      },
      "isPrime": false,
      "name": "Stakt Foldable Yoga Mat Pro - Non Slip 2 in 1 Fitness Exercise Mat",
      "pageIndex": 1,
      "price": "$128.00",
      "priceCents": 12800,
      "rating": 4.2,
      "reviewCount": 57,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/sspa/click?ie=UTF8&spc=x&url=%2FStakt-Foldable-Yoga-Mat-Pro%2Fdp%2FB0GNWFRM3X%2Fref%3Dsr_1_19_sspa%3Fdib%3DeyJ2IjoiMSJ9.McxGXA1uRR2X5VLLlTKa9FQsjFvdk3IZrCSKVG4gnGsqhtvlRyi1C6_kldSd63B_TFiqGQ_OWZjN3pEjhfMqb89jRixpMthJuFEMv-mmZEgJfpmqxAAmbcIxqe9Rks-W5iex1_ZX1yrdWGM8vbudNFr0rHfaeICEln6LGsZA5tnGVceP3omV3LRIWlzJAn7uiz1qArrcjQee6_KiP7rMefddx3-fWWMY1PkQbwvtTsQnWsAmqazPHedvvMK0n__FDfpLmtUeHpwG0CYYseh6I4Qv9br7na0VPh0XSKy-1hg.wUg0v-BAHC7fJYSVGHbYwCGPzj113BZi3GTmKTGN-_U%26dib_tag%3Dse%26keywords%3Dyoga%2Bmat%26qid%3D1790222636%26sr%3D8-19-spons%26sp_csd%3Dd2lkZ2V0TmFtZT1zcF9tdGY%26psc%3D1",
    },
    {
      "asin": "B0FHGMLGVG",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Foldable Yoga Mat Extra Large 74"×31.5"",
      "pageIndex": 1,
      "price": "$45.99",
      "priceCents": 4599,
      "rating": 4.4,
      "reviewCount": 77,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/sspa/click?ie=UTF8&spc=x&url=%2FFoldable-Yoga-Extra-Large-%25C3%259731-5%2Fdp%2FB0FHGMLGVG%2Fref%3Dsr_1_20_sspa%3Fdib%3DeyJ2IjoiMSJ9.McxGXA1uRR2X5VLLlTKa9FQsjFvdk3IZrCSKVG4gnGsqhtvlRyi1C6_kldSd63B_TFiqGQ_OWZjN3pEjhfMqb89jRixpMthJuFEMv-mmZEgJfpmqxAAmbcIxqe9Rks-W5iex1_ZX1yrdWGM8vbudNFr0rHfaeICEln6LGsZA5tnGVceP3omV3LRIWlzJAn7uiz1qArrcjQee6_KiP7rMefddx3-fWWMY1PkQbwvtTsQnWsAmqazPHedvvMK0n__FDfpLmtUeHpwG0CYYseh6I4Qv9br7na0VPh0XSKy-1hg.wUg0v-BAHC7fJYSVGHbYwCGPzj113BZi3GTmKTGN-_U%26dib_tag%3Dse%26keywords%3Dyoga%2Bmat%26qid%3D1790222636%26sr%3D8-20-spons%26sp_csd%3Dd2lkZ2V0TmFtZT1zcF9tdGY%26psc%3D1",
    },
    {
      "asin": "B0DRJ8VH3Q",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Yoga Mat, 80cm Wide, 1/3 Inch Thick Exercise Mat, Carry Strap, Fitness",
      "pageIndex": 1,
      "price": "$29.99",
      "priceCents": 2999,
      "rating": 4.5,
      "reviewCount": 47,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/sspa/click?ie=UTF8&spc=x&url=%2FNon-Slip-Fitness-Exercise-Environmental-Elastic%2Fdp%2FB0DRJ8VH3Q%2Fref%3Dsr_1_21_sspa%3Fdib%3DeyJ2IjoiMSJ9.McxGXA1uRR2X5VLLlTKa9FQsjFvdk3IZrCSKVG4gnGsqhtvlRyi1C6_kldSd63B_TFiqGQ_OWZjN3pEjhfMqb89jRixpMthJuFEMv-mmZEgJfpmqxAAmbcIxqe9Rks-W5iex1_ZX1yrdWGM8vbudNFr0rHfaeICEln6LGsZA5tnGVceP3omV3LRIWlzJAn7uiz1qArrcjQee6_KiP7rMefddx3-fWWMY1PkQbwvtTsQnWsAmqazPHedvvMK0n__FDfpLmtUeHpwG0CYYseh6I4Qv9br7na0VPh0XSKy-1hg.wUg0v-BAHC7fJYSVGHbYwCGPzj113BZi3GTmKTGN-_U%26dib_tag%3Dse%26keywords%3Dyoga%2Bmat%26qid%3D1790222636%26sr%3D8-21-spons%26sp_csd%3Dd2lkZ2V0TmFtZT1zcF9tdGY%26psc%3D1",
    },
    {
      "asin": "B0GJSKH1GN",
      "delta": {
        "dPriceCents": 0,
        "dRating": 0,
        "dReviews": 0,
        "isNew": false,
      },
      "isPrime": false,
      "name": "KEEP 72" x 24" Yoga Mat, 7mm Thick Non Slip TPE Mat",
      "pageIndex": 1,
      "price": "$24.99",
      "priceCents": 2499,
      "rating": 4.3,
      "reviewCount": 91,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/sspa/click?ie=UTF8&spc=x&url=%2FKEEP-Yoga-Thick-Slip-pink%2Fdp%2FB0GJSKH1GN%2Fref%3Dsr_1_22_sspa%3Fdib%3DeyJ2IjoiMSJ9.McxGXA1uRR2X5VLLlTKa9FQsjFvdk3IZrCSKVG4gnGsqhtvlRyi1C6_kldSd63B_TFiqGQ_OWZjN3pEjhfMqb89jRixpMthJuFEMv-mmZEgJfpmqxAAmbcIxqe9Rks-W5iex1_ZX1yrdWGM8vbudNFr0rHfaeICEln6LGsZA5tnGVceP3omV3LRIWlzJAn7uiz1qArrcjQee6_KiP7rMefddx3-fWWMY1PkQbwvtTsQnWsAmqazPHedvvMK0n__FDfpLmtUeHpwG0CYYseh6I4Qv9br7na0VPh0XSKy-1hg.wUg0v-BAHC7fJYSVGHbYwCGPzj113BZi3GTmKTGN-_U%26dib_tag%3Dse%26keywords%3Dyoga%2Bmat%26qid%3D1790222636%26sr%3D8-22-spons%26sp_csd%3Dd2lkZ2V0TmFtZT1zcF9tdGY%26psc%3D1",
    },
    {
      "asin": "B0C7SFV8RH",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "CAP Barbell 1/2-Inch High Density Exercise Yoga Mat with Strap | Multiple Options",
      "pageIndex": 1,
      "price": "$15.99",
      "priceCents": 1599,
      "rating": 4.6,
      "reviewCount": 3854,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/CAP-Barbell-Density-Exercise-strap/dp/B0C7SFV8RH/ref=sr_1_23?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-23",
    },
    {
      "asin": "B0FQKYGYGX",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "CAP Barbell 1/2-Inch High Density Exercise Yoga Mat with Strap | Multiple Options",
      "pageIndex": 1,
      "price": "$15.99",
      "priceCents": 1599,
      "rating": 4.6,
      "reviewCount": 3854,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/CAP-Barbell-Density-Exercise-strap/dp/B0FQKYGYGX/ref=sr_1_24?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-24",
    },
    {
      "asin": "B0B74MRJS3",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "KEEP Extra Wide Yoga Mat, 7mm Thick 72" x 32" Exercise Mat",
      "pageIndex": 1,
      "price": "$29.98",
      "priceCents": 2998,
      "rating": 4.5,
      "reviewCount": 735,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/KEEP-Non-Slip-Large-Yoga-All/dp/B0B74MRJS3/ref=sr_1_25?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-25",
    },
    {
      "asin": "B0GLQH4453",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "18 Pcs EVA Foam Floor Tiles, Puzzle Exercise Mat Set for Gym",
      "pageIndex": 1,
      "price": "$22.49",
      "priceCents": 2249,
      "rating": 4.2,
      "reviewCount": 1115,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Haulcove-Floor-Tiles-Puzzle-Exercise/dp/B0GLQH4453/ref=sr_1_26?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-26",
    },
    {
      "asin": "B092XNCFF7",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Retrospec Solana Yoga Mat 1" Thick w/Nylon Strap for Men & Women - Non Slip Exercise Mat for Home Yoga, Pilates, Stretching, Floor & Fitness Workouts",
      "pageIndex": 1,
      "price": "$39.99",
      "priceCents": 3999,
      "rating": 4.5,
      "reviewCount": 14999,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Retrospec-Solana-Thick-Nylon-Strap/dp/B092XNCFF7/ref=sr_1_27?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-27",
    },
    {
      "asin": "B0D9MWTQ9K",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "CAP Barbell Folding Exercise Mat – Durable, Anti-Tear, Thick Padding for Fitness, Aerobics, Gymnastics & Home Workouts. 72"L x 24"W x 2"Thick. BLACK",
      "pageIndex": 1,
      "price": "$36.97",
      "priceCents": 3697,
      "rating": 4.7,
      "reviewCount": 1486,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Purpose-Folding-Exercise-Training-Gymnastics/dp/B0D9MWTQ9K/ref=sr_1_28?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-28",
    },
    {
      "asin": "B0FNXCBRGL",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gaiam Thick Yoga Mat, Exercise & Fitness Mat with Easy-Cinch Carrying Strap",
      "pageIndex": 1,
      "price": "$24.98",
      "priceCents": 2498,
      "rating": 4.6,
      "reviewCount": 46641,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Gaiam-Essentials-Fitness-Exercise-Easy-Cinch/dp/B0FNXCBRGL/ref=sr_1_29?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-29",
    },
    {
      "asin": "B0FX3RZ2YN",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gruper Yoga Mat Non Slip, Anti-Tear Workout Mat with Carrying Strap and Bag",
      "pageIndex": 1,
      "price": "$22.49",
      "priceCents": 2249,
      "rating": 4.4,
      "reviewCount": 548,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Gruper-Anti-Tear-Exercise-Carrying-Exercises/dp/B0FX3RZ2YN/ref=sr_1_30?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-30",
    },
    {
      "asin": "B01IZDFWPG",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Fitvids All Purpose 1/4-Inch High Density Anti-Tear Exercise Yoga Mat with Carrying Strap with Optional Yoga Blocks, Multiple Colors",
      "pageIndex": 1,
      "price": "$16.99",
      "priceCents": 1699,
      "rating": 4.4,
      "reviewCount": 47391,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/BalanceFrom-Purpose-Non-Slip-Exercise-Carrying/dp/B01IZDFWPG/ref=sr_1_31?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-31",
    },
    {
      "asin": "B0C359D7JX",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gaiam Yoga Mat - Premium 5mm Solid Thick Non Slip Exercise & Fitness Mat for All Types of Yoga, Pilates & Floor Workouts (68" x 24" x 5mm)",
      "pageIndex": 1,
      "price": "$20.81",
      "priceCents": 2081,
      "rating": 4.4,
      "reviewCount": 4305,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Gaiam-Premium-Exercise-Workouts-Sagebrush/dp/B0C359D7JX/ref=sr_1_32?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-32",
    },
    {
      "asin": "B0BYFFX51Z",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gaiam Premium Yoga Mat, 6mm Thick Print Mat",
      "pageIndex": 1,
      "price": "$19.29",
      "priceCents": 1929,
      "rating": 4.7,
      "reviewCount": 22194,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Gaiam-Yoga-Mat-Exercise-Workouts/dp/B0BYFFX51Z/ref=sr_1_33?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-33",
    },
    {
      "asin": "B09WF4GPPC",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gaiam Premium Yoga Mat, 6mm Thick Print Mat",
      "pageIndex": 1,
      "price": "$21.00",
      "priceCents": 2100,
      "rating": 4.7,
      "reviewCount": 22194,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Gaiam-Premium-Exercise-Fitness-Workouts/dp/B09WF4GPPC/ref=sr_1_34?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-34",
    },
    {
      "asin": "B0DG3WYD54",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "CAP Barbell 1/2-Inch High Density Exercise Yoga Mat with Strap | Multiple Options",
      "pageIndex": 1,
      "price": "$18.99",
      "priceCents": 1899,
      "rating": 4.6,
      "reviewCount": 3854,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/CAP-Barbell-Density-Exercise-strap/dp/B0DG3WYD54/ref=sr_1_35?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-35",
    },
    {
      "asin": "B091FZL25K",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Retrospec Solana Yoga Mat Thick 1/2in Non-Slip Workout Mat with Nylon Strap - 72x24in Exercise Mat for Pilates, Stretching & Fitness - BPA Free, Easy Clean",
      "pageIndex": 1,
      "price": "$24.99",
      "priceCents": 2499,
      "rating": 4.4,
      "reviewCount": 9310,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Retrospec-Solana-Thick-Nylon-Strap/dp/B091FZL25K/ref=sr_1_36?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-36",
    },
    {
      "asin": "B0GFZ72SJR",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "KEEP Extra Thick NBR Yoga Mat for Women & Men, 10mm Thick, 72”x32” Large Exercise Mat with Non-Slip Workout Mat for Yoga, Pilates, Stretching, Meditation – Wide & Cushioned Fitness Mat",
      "pageIndex": 1,
      "price": "$21.99",
      "priceCents": 2199,
      "rating": 4.5,
      "reviewCount": 295,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/KEEP-Exercise-Non-Slip-Stretching-Meditation/dp/B0GFZ72SJR/ref=sr_1_37?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-37",
    },
    {
      "asin": "B01MY5MZSQ",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gaiam Yoga Mat Classic Print, 4mm Non-Slip Mat",
      "pageIndex": 1,
      "price": "$24.38",
      "priceCents": 2438,
      "rating": 4.5,
      "reviewCount": 12620,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Gaiam-Classic-Exercise-Exercises-Marrakesh/dp/B01MY5MZSQ/ref=sr_1_38?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-38",
    },
    {
      "asin": "B005NZ7PEQ",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Manduka PRO Yoga Mat - 6mm | Lifetime Durability | Hygienic Construction | Premium Studio Quality | Teacher Approved",
      "pageIndex": 1,
      "price": "$144.00",
      "priceCents": 14400,
      "rating": 4.5,
      "reviewCount": 9005,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Manduka-Yoga-Pilates-Black-Sage/dp/B005NZ7PEQ/ref=sr_1_39?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-39",
    },
    {
      "asin": "B0CJ39LHNX",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "YOGATI® Yoga Mat with Strap with Alignment Lines. Home Workout Mat for Women, Men and Kids. Thick Non Slip Yoga Mat for Pilates and Fitness. Brown, Pink and Purple Yoga Mats",
      "pageIndex": 1,
      "price": "$19.98",
      "priceCents": 1998,
      "rating": 4.5,
      "reviewCount": 7726,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/YOGATI-workout-Pilates-Fitness-Exercise/dp/B0CJ39LHNX/ref=sr_1_40?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-40",
    },
    {
      "asin": "B0CP47T6ZP",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Voyage 5mm Studio Yoga Mats, 6 Pack, 72x24in",
      "pageIndex": 1,
      "price": "$99.99",
      "priceCents": 9999,
      "rating": 4.8,
      "reviewCount": 125,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Sunshine-Yoga-Exercise-Workout-Anti-Tear/dp/B0CP47T6ZP/ref=sr_1_41?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-41",
    },
    {
      "asin": "B0CL9CR6FJ",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Economy 3mm Bulk Yoga Mats, 10 Pack, 68x24in",
      "pageIndex": 1,
      "price": "$89.99",
      "priceCents": 8999,
      "rating": 4.7,
      "reviewCount": 21,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Upward-Economy-Bulk-68x24in-Assorted/dp/B0CL9CR6FJ/ref=sr_1_42?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-42",
    },
    {
      "asin": "B087F16GKW",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gaiam Yoga Mat - Premium 5mm Solid Thick Non Slip Exercise & Fitness Mat for All Types of Yoga, Pilates & Floor Workouts (68" x 24" x 5mm)",
      "pageIndex": 1,
      "price": "$22.65",
      "priceCents": 2265,
      "rating": 4.4,
      "reviewCount": 4305,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Gaiam-Black-Yoga-Mat-Mm/dp/B087F16GKW/ref=sr_1_43?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-43",
    },
    {
      "asin": "B0F6426TRG",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Manduka PROlite Yoga Mat 4.7mm | Lifetime Durability | Hygienic Construction | Teacher Approved",
      "pageIndex": 1,
      "price": "$99.99",
      "priceCents": 9999,
      "rating": 4.5,
      "reviewCount": 4599,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Manduka-PROlite-Yoga-Mat-Recommended/dp/B0F6426TRG/ref=sr_1_44?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-44",
    },
    {
      "asin": "B01LP0U5X0",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Amazon Basics Extra Thick Exercise Yoga Mat with Carrying Strap",
      "pageIndex": 1,
      "price": "N/A",
      "priceCents": null,
      "rating": 4.6,
      "reviewCount": 70632,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/AmazonBasics-Extra-Thick-Exercise-Carrying/dp/B01LP0U5X0/ref=sr_1_45?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-45",
    },
    {
      "asin": "B0DQC2WV8Y",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Fitvids 1/2-inch Thick High Density Exercise Yoga Mat with Carrying Strap",
      "pageIndex": 1,
      "price": "$20.99",
      "priceCents": 2099,
      "rating": 4.5,
      "reviewCount": 94420,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Fitvids-Exercise-Anti-Tear-Carrying-Exercises/dp/B0DQC2WV8Y/ref=sr_1_46?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-46",
    },
    {
      "asin": "B01I5CFUHM",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Manduka PRO Yoga Mat - 6mm | Lifetime Durability | Hygienic Construction | Premium Studio Quality | Teacher Approved",
      "pageIndex": 1,
      "price": "$144.00",
      "priceCents": 14400,
      "rating": 4.5,
      "reviewCount": 9005,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Manduka-PRO-Yoga-Pilates-Odyssey/dp/B01I5CFUHM/ref=sr_1_47?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-47",
    },
    {
      "asin": "B07H9KV1GG",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gaiam Essentials 1/4" Thin (6mm) Yoga & Pilates, Fitness & Exercise Mat with Easy-Cinch Carrier Strap Cusion Support For Fitness and Gym Workouts",
      "pageIndex": 1,
      "price": "$20.69",
      "priceCents": 2069,
      "rating": 4.6,
      "reviewCount": 14969,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Gaiam-Essentials-Premium-Carrier-Sling/dp/B07H9KV1GG/ref=sr_1_48?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-48",
    },
    {
      "asin": "B0BPC5YDDV",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Funtery 3 mm Thin Yoga Mats Bulk, 68 x 24 in",
      "pageIndex": 1,
      "price": "$129.99",
      "priceCents": 12999,
      "rating": 3.6,
      "reviewCount": 146,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Funtery-Pack-Thin-Yoga-Multicolored/dp/B0BPC5YDDV/ref=sr_1_49?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-49",
    },
    {
      "asin": "B0DSR7K8CL",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Sunny Health & Fitness Exercise Yoga Mats - Non-Slip Support for Home & Gym",
      "pageIndex": 1,
      "price": "$18.99",
      "priceCents": 1899,
      "rating": 4.4,
      "reviewCount": 6024,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Sunny-Health-Fitness-Lightweight-Stretching/dp/B0DSR7K8CL/ref=sr_1_50?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-50",
    },
    {
      "asin": "B0D4MFT49T",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gaiam Premium Yoga Mat, 6mm Thick Print Mat",
      "pageIndex": 1,
      "price": "$39.99",
      "priceCents": 3999,
      "rating": 4.7,
      "reviewCount": 22194,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Gaiam-Yoga-Mat-Exercise-Workouts/dp/B0D4MFT49T/ref=sr_1_51?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-51",
    },
    {
      "asin": "B0F7YCXYHV",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Cork Yoga Mat with Natural Rubber Base, Extra Size, Thickness and Support, Excellent Cushion & Grip, Non-Slip, Non-Toxic, Sweat-Resistant, Sustainable, Eco-friendly Exercise Mat",
      "pageIndex": 1,
      "price": "$89.00",
      "priceCents": 8900,
      "rating": 4.6,
      "reviewCount": 255,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Satori-Concept-Sweat-Resistant-Sustainable-Eco-friendly/dp/B0F7YCXYHV/ref=sr_1_52?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-52",
    },
    {
      "asin": "B0FNN64N3C",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "SPRI Hanging Exercise Mats for Gyms, Closed-Cell Foam Yoga & Fitness Mats with Grommets, Thick Workout Mats for Studios & Group Fitness Classes",
      "pageIndex": 1,
      "price": "$233.01",
      "priceCents": 23301,
      "rating": 4.7,
      "reviewCount": 8,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/SPRI-Hanging-Exercise-6-Pack-Black/dp/B0FNN64N3C/ref=sr_1_53?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-53",
    },
    {
      "asin": "B0DM6JN33F",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Amazon Basics 1/4 Inch Thick TPE Exercise Yoga Mat with Carrying Strap",
      "pageIndex": 1,
      "price": "$19.27",
      "priceCents": 1927,
      "rating": 4.6,
      "reviewCount": 968,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Amazon-Basics-Thick-Exercise-Carrying/dp/B0DM6JN33F/ref=sr_1_54?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-54",
    },
    {
      "asin": "B0876QTBKZ",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "CAMBIVO Extra Long Wide Yoga Mat, Thick PVC Workout Mat",
      "pageIndex": 1,
      "price": "$39.99",
      "priceCents": 3999,
      "rating": 4.6,
      "reviewCount": 3287,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/CAMBIVO-Yoga-Mat-Exercise-Barefoot/dp/B0876QTBKZ/ref=sr_1_55?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-55",
    },
    {
      "asin": "B0C35Q9B95",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gaiam Yoga Mat - Premium 5mm Solid Thick Non Slip Exercise & Fitness Mat for All Types of Yoga, Pilates & Floor Workouts (68" x 24" x 5mm)",
      "pageIndex": 1,
      "price": "$23.47",
      "priceCents": 2347,
      "rating": 4.4,
      "reviewCount": 4305,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Gaiam-Premium-Exercise-Workouts-Sunburnt/dp/B0C35Q9B95/ref=sr_1_56?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-56",
    },
    {
      "asin": "B08R5ZG89X",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Heathyoga Yoga Mat Non Slip TPE Pilates Exercise Mats for Home Workout Gym Fitness Eco Friendly Thick Hot Yoga Mat with Strap Body Alignment,72"x 26" Thickness 1/4"",
      "pageIndex": 1,
      "price": "$36.99",
      "priceCents": 3699,
      "rating": 4.5,
      "reviewCount": 9506,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Heathyoga-Friendly-Alignment-Certified-Material/dp/B08R5ZG89X/ref=sr_1_57?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-57",
    },
    {
      "asin": "B07664K1CW",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "ProsourceFit Exercise Balance Pad, Non-Slip Cushioned Foam Mat & Knee Pad for Fitness and Stability Training, Yoga, Physical Therapy",
      "pageIndex": 1,
      "price": "$26.99",
      "priceCents": 2699,
      "rating": 4.8,
      "reviewCount": 17261,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/ProsourceFit-Exercise-Balance-Pad-Cushioned/dp/B07664K1CW/ref=sr_1_58?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-58",
    },
    {
      "asin": "B07234M1LY",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "CAP Non-Slip Yoga Mat for Home Workout & Pilates, Lightweight Exercise Fitness Mat with Textured Grip Surface, Portable Roll-Up Yoga Mat for Women & Men",
      "pageIndex": 1,
      "price": "$11.99",
      "priceCents": 1199,
      "rating": 4.2,
      "reviewCount": 5199,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/CAP-Non-Slip-Exercises-Lightweight-Exercise/dp/B07234M1LY/ref=sr_1_59?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-59",
    },
    {
      "asin": "B0CF64T5JY",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Liforme Travel Yoga Mat - Patented Alignment Design, Advanced Non-Slip Grip",
      "pageIndex": 1,
      "price": "$160.00",
      "priceCents": 16000,
      "rating": 4.4,
      "reviewCount": 984,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/Liforme-Travel-Yoga-Biodegradable-Ultra-Lightweight/dp/B0CF64T5JY/ref=sr_1_60?dib=x&dib_tag=x&keywords=yoga+mat&qid=x&sr=8-60",
    },
    {
      "asin": "B092XMWXK7",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Retrospec Solana Yoga Mat 1" Thick w/Nylon Strap for Men & Women - Non Slip Exercise Mat for Home Yoga, Pilates, Stretching, Floor & Fitness Workouts",
      "pageIndex": 1,
      "price": "$39.99",
      "priceCents": 3999,
      "rating": 4.5,
      "reviewCount": 14999,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/sspa/click?ie=UTF8&spc=x&url=%2FRetrospec-Solana-Thick-Nylon-Strap%2Fdp%2FB092XMWXK7%2Fref%3Dsxbs_pa_sp_search_thematic_btf_sspa%3Fcontent-id%3Damzn1.sym.230701df-77c6-4675-b11d-39cf91b8bb1b%253Aamzn1.sym.230701df-77c6-4675-b11d-39cf91b8bb1b%26cv_ct_cx%3Dyoga%2Bmat%26keywords%3Dyoga%2Bmat%26pd_rd_i%3DB092XMWXK7%26pd_rd_r%3Dde21bbd9-1795-44ef-a802-9f896189ba48%26pd_rd_w%3DjO2FJ%26pd_rd_wg%3DgaFhJ%26pf_rd_p%3D230701df-77c6-4675-b11d-39cf91b8bb1b%26pf_rd_r%3DP96Q3KMBPB9SP02HFAJV%26qid%3D1790222636%26sbo%3DRZvfv%252F%252FHxDF%252BO5021pAnSA%253D%253D%26sr%3D1-1-2111c337-e22b-460d-97fe-5be1c77b95e4-spons%26aref%3DoP6DnEEjSV%26sp_csd%3Dd2lkZ2V0TmFtZT1zcF9zZWFyY2hfdGhlbWF0aWNfYnRm%26psc%3D1&aref=x",
    },
    {
      "asin": "B0GNTSW3GY",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Stakt Foldable Yoga Mat Pro - Non Slip 2 in 1 Fitness Exercise Mat",
      "pageIndex": 1,
      "price": "$128.00",
      "priceCents": 12800,
      "rating": 4.2,
      "reviewCount": 57,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/sspa/click?ie=UTF8&spc=x&url=%2FStakt-Foldable-Yoga-Mat-Pro%2Fdp%2FB0GNTSW3GY%2Fref%3Dsxbs_pa_sp_search_thematic_btf_sspa%3Fcontent-id%3Damzn1.sym.230701df-77c6-4675-b11d-39cf91b8bb1b%253Aamzn1.sym.230701df-77c6-4675-b11d-39cf91b8bb1b%26cv_ct_cx%3Dyoga%2Bmat%26keywords%3Dyoga%2Bmat%26pd_rd_i%3DB0GNTSW3GY%26pd_rd_r%3Dde21bbd9-1795-44ef-a802-9f896189ba48%26pd_rd_w%3DjO2FJ%26pd_rd_wg%3DgaFhJ%26pf_rd_p%3D230701df-77c6-4675-b11d-39cf91b8bb1b%26pf_rd_r%3DP96Q3KMBPB9SP02HFAJV%26qid%3D1790222636%26sbo%3DRZvfv%252F%252FHxDF%252BO5021pAnSA%253D%253D%26sr%3D1-2-2111c337-e22b-460d-97fe-5be1c77b95e4-spons%26aref%3DvpBIlzoJbf%26sp_csd%3Dd2lkZ2V0TmFtZT1zcF9zZWFyY2hfdGhlbWF0aWNfYnRm%26psc%3D1&aref=x",
    },
    {
      "asin": "B00DJQFAV6",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Manduka PRO Yoga Mat - 6mm | Lifetime Durability | Hygienic Construction | Premium Studio Quality | Teacher Approved",
      "pageIndex": 1,
      "price": "$144.00",
      "priceCents": 14400,
      "rating": 4.5,
      "reviewCount": 9005,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/sspa/click?ie=UTF8&spc=x&url=%2FManduka-PRO-Yoga-Pilates-Verve%2Fdp%2FB00DJQFAV6%2Fref%3Dsxbs_pa_sp_search_thematic_btf_sspa%3Fcontent-id%3Damzn1.sym.230701df-77c6-4675-b11d-39cf91b8bb1b%253Aamzn1.sym.230701df-77c6-4675-b11d-39cf91b8bb1b%26cv_ct_cx%3Dyoga%2Bmat%26keywords%3Dyoga%2Bmat%26pd_rd_i%3DB00DJQFAV6%26pd_rd_r%3Dde21bbd9-1795-44ef-a802-9f896189ba48%26pd_rd_w%3DjO2FJ%26pd_rd_wg%3DgaFhJ%26pf_rd_p%3D230701df-77c6-4675-b11d-39cf91b8bb1b%26pf_rd_r%3DP96Q3KMBPB9SP02HFAJV%26qid%3D1790222636%26sbo%3DRZvfv%252F%252FHxDF%252BO5021pAnSA%253D%253D%26sr%3D1-3-2111c337-e22b-460d-97fe-5be1c77b95e4-spons%26aref%3D63wuFgi1b8%26sp_csd%3Dd2lkZ2V0TmFtZT1zcF9zZWFyY2hfdGhlbWF0aWNfYnRm%26psc%3D1&aref=x",
    },
    {
      "asin": "B0DFBSMMZS",
      "delta": {
        "dPriceCents": 0,
        "dRating": 0,
        "dReviews": 0,
        "isNew": false,
      },
      "isPrime": false,
      "name": "PAIDU Foldable Yoga Mat 10mm Thick, 75"x26" Non-Slip Fitness Exercise Mat",
      "pageIndex": 1,
      "price": "$51.49",
      "priceCents": 5149,
      "rating": 4.3,
      "reviewCount": 100,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/sspa/click?ie=UTF8&spc=x&url=%2FPAIDU-Foldable-material-portable-multi-functional%2Fdp%2FB0DFBSMMZS%2Fref%3Dsxbs_pa_sp_search_thematic_btf_sspa%3Fcontent-id%3Damzn1.sym.230701df-77c6-4675-b11d-39cf91b8bb1b%253Aamzn1.sym.230701df-77c6-4675-b11d-39cf91b8bb1b%26cv_ct_cx%3Dyoga%2Bmat%26keywords%3Dyoga%2Bmat%26pd_rd_i%3DB0DFBSMMZS%26pd_rd_r%3Dde21bbd9-1795-44ef-a802-9f896189ba48%26pd_rd_w%3DjO2FJ%26pd_rd_wg%3DgaFhJ%26pf_rd_p%3D230701df-77c6-4675-b11d-39cf91b8bb1b%26pf_rd_r%3DP96Q3KMBPB9SP02HFAJV%26qid%3D1790222636%26sbo%3DRZvfv%252F%252FHxDF%252BO5021pAnSA%253D%253D%26sr%3D1-4-2111c337-e22b-460d-97fe-5be1c77b95e4-spons%26aref%3DD9jRgmzR9f%26sp_csd%3Dd2lkZ2V0TmFtZT1zcF9zZWFyY2hfdGhlbWF0aWNfYnRm%26psc%3D1&aref=x",
    },
    {
      "asin": "B0HF4FK2QS",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gruper Yoga Mat Non Slip, TPE Extra Wide Yoga Mat with Alignment Mark",
      "pageIndex": 1,
      "price": "$35.99",
      "priceCents": 3599,
      "rating": 4.4,
      "reviewCount": 474,
      "runId": "run-golden",
      "scrapedAt": "string",
      "url": "https://www.amazon.com/sspa/click?ie=UTF8&spc=x&url=%2FGruper-TPE-Blue-Black-Yoga-Mat%2Fdp%2FB0HF4FK2QS%2Fref%3Dsxbs_pa_sp_search_thematic_btf_sspa%3Fcontent-id%3Damzn1.sym.230701df-77c6-4675-b11d-39cf91b8bb1b%253Aamzn1.sym.230701df-77c6-4675-b11d-39cf91b8bb1b%26cv_ct_cx%3Dyoga%2Bmat%26keywords%3Dyoga%2Bmat%26pd_rd_i%3DB0HF4FK2QS%26pd_rd_r%3Dde21bbd9-1795-44ef-a802-9f896189ba48%26pd_rd_w%3DjO2FJ%26pd_rd_wg%3DgaFhJ%26pf_rd_p%3D230701df-77c6-4675-b11d-39cf91b8bb1b%26pf_rd_r%3DP96Q3KMBPB9SP02HFAJV%26qid%3D1790222636%26sbo%3DRZvfv%252F%252FHxDF%252BO5021pAnSA%253D%253D%26sr%3D1-5-2111c337-e22b-460d-97fe-5be1c77b95e4-spons%26aref%3DRf9xQFU1RZ%26sp_csd%3Dd2lkZ2V0TmFtZT1zcF9zZWFyY2hfdGhlbWF0aWNfYnRm%26psc%3D1&aref=x",
    },
  ],
  "runPages": [
    {
      "count": 70,
      "pageIndex": 1,
      "url": "https://www.amazon.com/s?k=yoga+mat",
    },
  ],
  "sent": [
    "UPDATE_PROGRESS",
    "ENQUEUE_SYNC",
  ],
}
`;
